# openclaw-insurance-broker

./: .gitignore  .npmignore  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLAWHUB_BADGE.md  CLAWHUB_PUBLISH.md  CLAWHUB_SUMMARY.md  CONTRIBUTING.md  DELIVERY.md  DEVELOPMENT_PLAN.md  EXAMPLES.md  FAQ.md  FINAL_SUMMARY.md  INSTALL.md  INSURANCE_BROKER_README.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PUBLISH_GUIDE.md  PUBLISH_NOW.sh  PUBLISH_STEPS.md  QUICKSTART.md  QUICK_REFERENCE.md  README-PYTHON.md  README.md  READY_TO_PUBLISH.md  START_HERE.md  SUMMARY.md  clawhub.json  package-lock.json  package.json  publish-to-github.sh  pyproject.toml  requirements.txt  skill.json.bak  tsconfig.json
assets/: README.md
data/: investors.example.json
docs/: ADVANCED_ARCHITECTURE.md  ARCHITECTURE.md  DATA_CRAWLER_DESIGN.md  DISPUTE_RESOLUTION_DESIGN.md  HEALTH_DECLARATION_DESIGN.md  RECOMMENDATION_ALGORITHM.md  USAGE.md  USER_PROFILE_DESIGN.md
fa_plugin/: __init__.py  config.py  plugin.py
fa_plugin/adapters/: __init__.py  context_adapter.py
fa_plugin/agents/: __init__.py  base.py  bp_agent.py  financial_agent.py  investor_agent.py  strategy_agent.py
fa_plugin/tools/: __init__.py
fa_plugin/types/: __init__.py  models.py  protocols.py
fa_plugin/utils/: __init__.py  formatters.py  intent_parser.py  investor_matcher.py  project_extractor.py
scripts/: prepare-clawhub.sh  quick-publish.sh  setup.sh
src/: index.ts  insurance-types.ts  plugin-types.ts  plugin.ts  types.ts
src/adapters/: context-adapter.ts
src/agents/: bp-agent.ts  financial-agent.ts  investor-match-agent.ts  strategy-agent.ts
src/insurance-agents/: needs-analysis-agent.ts
src/tools/: bp-generator.ts  financial-model.ts  investor-db.ts  valuation.ts
src/utils/: intent-parser.ts  investor-matcher.ts  project-extractor.ts
