[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-fa-plugin"
version = "0.1.0"
description = "OpenClaw FA Plugin - 一级市场投融资顾问"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "openclaw",
    "plugin",
    "fa",
    "financial-advisor",
    "fundraising",
    "venture-capital"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
financial = [
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/openclaw-fa-plugin"
Documentation = "https://github.com/yourusername/openclaw-fa-plugin/blob/main/README.md"
Repository = "https://github.com/yourusername/openclaw-fa-plugin"
Issues = "https://github.com/yourusername/openclaw-fa-plugin/issues"

[tool.setuptools]
packages = ["fa_plugin"]

[tool.setuptools.package-data]
fa_plugin = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
